--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,21 @@
-# Sensitive configuration files
+# Trading System Gitignore
+
+# API Configuration (contains sensitive credentials)
 trading_config.json
-config.json
-*.key
-*.pem
-*.p12
+*.env
+.env.local
+.env.production
 
 # Database files
 *.db
-*.db.wal
+*.db-wal
+*.db-shm
 *.sqlite
 *.sqlite3
 
 # Log files
-logs/
+logs/*.log
+logs/ws_ticks_*.csv
 *.log
 
 # Python
@@ -36,10 +39,11 @@ wheels/
 *.egg-info/
 .installed.cfg
 *.egg
+MANIFEST
 
 # Virtual environments
-env/
 venv/
+env/
 ENV/
 env.bak/
 venv.bak/
@@ -49,12 +53,51 @@ venv.bak/
 .idea/
 *.swp
 *.swo
+*~
 
 # OS
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
 Thumbs.db
 
-# API keys and secrets
-.env
-secrets.json
-credentials.json
+# Temporary files
+*.tmp
+*.temp
+*.bak
+*.backup
+
+# Codespace specific
+.codespaces/
+.devcontainer/.env
+
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# pytest
+.pytest_cache/
+.coverage
+htmlcov/
+
+# mypy
+.mypy_cache/
+.dmypy.json
+dmypy.json
+
+# Trading data exports
+exports/
+downloads/
+*.csv
+!CDNSEScripMaster.txt
+
+# Large files
+*.zip
+*.tar.gz
+*.rar
+
+# Backup files
+*.orig
+*.rej
