--- a/.github/workflows/codespace-startup.yml
+++ b/.github/workflows/codespace-startup.yml
@@ -20,12 +20,10 @@ jobs:
     - name: Install dependencies
       run: |
         echo "Installing Python dependencies..."
-        cd trading_system
-        pip install -r ../requirements.txt
+        pip install -r requirements.txt
         
     - name: Create default config if not exists
       run: |
-        cd trading_system
         if [ ! -f trading_config.json ]; then
           echo "Creating default trading_config.json..."
           cp trading_config.template.json trading_config.json
@@ -34,7 +32,6 @@ jobs:
         
     - name: Initialize databases
       run: |
-        cd trading_system
         echo "Initializing databases..."
         python -c "
         try:
