--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -36,6 +36,6 @@
         }
     },
     "postCreateCommand": "bash .devcontainer/post-create.sh",
-    "postStartCommand": "echo '🚀 Trading System ready! Run: python run_server.py'",
+    "postStartCommand": "echo '🚀 Trading System ready! Run: cd trading_system && python run_server.py'",
     "remoteUser": "vscode"
 }
